[project]
name = "literature-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "crewai>=0.134.0",
    "crewai-tools>=0.48.0",
    "dotenv>=0.9.9",
    "langchain-core>=0.3.66",
    "mcp>=1.9.4",
    "openai>=1.86.0",
    "pypdf2>=3.0.1",
]
